Fix : Sidebar Icons' Alignment

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -119,7 +119,7 @@ a, button, .nav-links a {
 ========================= */
 button {
     padding: 10px 20px;
-    margin: 5px;
+    /* margin: 5px; */
     font-size: 16px;
     border-radius: 12px;
     border: none;
